--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       h1{font-size: 9vw;}
       h3{font-size: 4vw;}
       .container{position: relative; width: 100vw; height: 100vh;}
-      .div{position: absolute; top: 50%; transform: translate(0, -50%); width: 100vw; text-align: center}
+      .div{position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100vw; text-align: center;}
     </style>
   </head>
 
