--- a/index.html
+++ b/index.html
@@ -7,25 +7,40 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
     <style media="screen">
-      body{font-family: 'Roboto Condensed', sans-serif; background-color: black; color: white}
+      body{font-family: 'Roboto Condensed', sans-serif; background-color: black; color: white;}
       h1{font-size: 9vw;}
       h3{font-size: 4vw;}
-      .container{position: relative; width: 100vw; height: 100vh;}
-      .div{position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100vw; text-align: center;}
+      a:link, a:visited, a:active, a:hover{color: white; text-decoration: none;}
+      .div-container{position: relative; width: 100vw; height: 100vh;}
+      .center-div{position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100vw; text-align: center;}
+      .vertical-div{position: absolute; padding-top: 2vh; width: 100vw; text-align: center;}
+      .footer-container{position: relative; width: 100vw; height: 10vh;}
+      .footer{position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100vw; text-align: center;}
+      #white{background-color: white; color: black;}
     </style>
   </head>
 
   <body>
-      <div class="container">
-        <div class="div">
+      <div class="div-container">
+        <div class="center-div">
           <h1>WERE YOU RACIST?</h1>
           <h3>If you are reading this, someone thinks so.</h3>
         </div>
       </div>
+      <!-- <div class="div-container" id='white'>
+        <div class="vertical-div">
+          <h1></h1>
+        </div>
+      </div> -->
+      <div class="footer-container">
+        <div class="footer">
+          <h5><a href="https://negrita.tech"> negrita.tech </a></h5>
+        </div>
+      </div>
+
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" charset="utf-8"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js" charset="utf-8"></script>
-      <script type="text/javascript">
-      </script>
+
 
   </body>
 </html>
