--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
           <h1></h1>
         </div>
       </div> -->
-      <div class="footer-container">
+      <!-- <div class="footer-container">
         <div class="footer">
           <h5><a href="https://negrita.tech"> negrita.tech </a></h5>
         </div>
-      </div>
+      </div> -->
 
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" charset="utf-8"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js" charset="utf-8"></script>
